--- a/requirements.txt
+++ b/requirements.txt
@@ -18,12 +18,15 @@ django-crispy-forms==1.13.0
 django-datatables-view==1.20.0
 django-htmx==1.17.3
 django-jazzmin==2.6.0
+django-stubs==5.0.0
+django-stubs-ext==5.0.0
 environs==9.3.5
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
 marshmallow==3.20.2
 packaging==23.2
+pillow==10.3.0
 psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
@@ -37,6 +40,7 @@ six==1.16.0
 sqlparse==0.4.4
 Twisted==24.3.0
 txaio==23.1.1
+types-PyYAML==6.0.12.20240311
 typing_extensions==4.9.0
 tzdata==2023.4
 whitenoise==6.6.0
